--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -61,4 +61,13 @@
         android:textColor="#000000"
         android:textFontWeight="500"
         android:textSize="20dp" />
+
+    <Button
+        android:id="@+id/nextButton"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:text="Next Screen"
+        android:layout_gravity="center"
+        android:layout_marginTop="1dp"/>
+
 </LinearLayout>
