--- a/src/main/res/layout/activity_question_1.xml
+++ b/src/main/res/layout/activity_question_1.xml
@@ -56,4 +56,13 @@
         android:layout_marginLeft="360dp"
         android:layout_marginTop="-29dp"/>
 
+    <Button
+        android:id="@+id/nextButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Next Screen"
+        android:layout_gravity="center"
+        android:layout_marginTop="-200dp"/>
+
+
 </LinearLayout>
