--- a/src/main/res/layout/activity_question_2.xml
+++ b/src/main/res/layout/activity_question_2.xml
@@ -97,5 +97,13 @@
                 android:fontFamily="@font/manrope_regular" />
         </LinearLayout>
     </LinearLayout>
+    <Button
+        android:id="@+id/nextButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Next Screen"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"/>
+
 
 </LinearLayout>
