--- a/src/main/res/layout/activity_question_4.xml
+++ b/src/main/res/layout/activity_question_4.xml
@@ -37,7 +37,7 @@
         android:layout_marginTop="26dp"
         android:fontFamily="@font/manrope_regular"
         android:textColor="#2E236C"
-        android:textColorHint="#EBC4FF";
+        android:textColorHint="#EBC4FF"/>
 
     <TextView
         android:layout_width="110dp"
@@ -57,6 +57,14 @@
         android:contentDescription="back button"
         android:layout_marginLeft="330dp"
         android:layout_marginTop="-29dp"/>
+    <Button
+        android:id="@+id/nextButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Next Screen"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="-100dp"/>
+
 
 
 </LinearLayout>
